test-cases/final-dump/bad_module_name.exp
Error detected during loading module: bad_module_name
[91mfinal-dump/bad_module_name.wybe:3:8: Syntax error: unexpected identifier T0
[0m
