test-cases/final-dump/bad_module_name.wybe
# this tests bad module names, that is, module names that look like type variables

module T0 { }